fixed z-index of footer

--- a/grunt-build/app/sass/components/adidas/_headerfooter.scss
+++ b/grunt-build/app/sass/components/adidas/_headerfooter.scss
@@ -300,10 +300,11 @@ Styleguide 3.2
 
 */
 footer {
-	
+
 	.signupbar-wrapper {
 		background-color: #000;
 		float:none;
+		position: relative;
 	}
 
 	.signupbar {
